Super Simple HTML5, CSS3, & JavaScript for WebApps components
Useful for modern WebApps and responsive mobile layout
Save you a lot of hours

--- a/public/SuperTemplate/css/SuperTemplate.css
+++ b/public/SuperTemplate/css/SuperTemplate.css
@@ -1,5 +1,5 @@
 /*
-	SuperTemplate.supermobile.dk HTML SuperTemplate by Jalal Hejazi
+	SuperTemplate.supermobile.dk HTML SuperTemplate by Jalal Hejazi 2014
 	SuperTemplate.css
 
 	Don't edit the file if you want HTML SuperTemplate to be upgradeable.
