--- a/views/Instructions.html
+++ b/views/Instructions.html
@@ -6,7 +6,7 @@
 	<div class="col_8">
 	<h4><i class="icon-wrench"></i> Setup</h4>
 	<ol>
-	<li><a href="http://SuperTemplate.supermobile.dk/downloads/">Download HTML5 SuperTemplate</a></li>
+	<li><a href="https://github.com/Jalalhejazi/HTML5-SuperTemplate">git clone HTML5 SuperTemplate</a></li>
 	<li>Include SuperTemplate resources
 <pre>
 &lt;link rel=&quot;stylesheet&quot; href=&quot;css/SuperTemplate.css&quot; media=&quot;all&quot; /&gt; 
