--- a/views/layout.html
+++ b/views/layout.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="HTML5 SuperTemplate save you a lot of hours " />
-    <meta name="copyright" content="Jalal Hejazi SuperTemplate.supermobile.dk" />
+    <meta name="description" content="HTML5 SuperTemplate RWD Mobile Web" />
+    <meta name="copyright" content="Jalal Hejazi 2014" />
 
 
     <link href="/SuperTemplate/css/SuperTemplate.css" rel="stylesheet">
@@ -14,6 +14,8 @@
 
     <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="/SuperTemplate/js/SuperTemplate.js"></script>
+ 
+
 </head>
 
 <body>
@@ -158,10 +160,12 @@
     <div class="clear"></div>
     <div id="footer">
         &copy; Copyright 2014 All Rights Reserved. This website was built with
-        <a href="#">HTML5 SuperTemplate</a> •
+        <a href="#">HTML5 SuperTemplate</a> • by Jalal Hejazi 2014 •
     </div>
 
 
+
+   
 
 
 </body>
