bower install HTML5-SuperTemplate

--- a/views/Instructions.html
+++ b/views/Instructions.html
@@ -4,21 +4,43 @@
 <h3>{{title}}</h3>
 	<div id="instructions" class="tab-content">
 	<div class="col_8">
-	<h4><i class="icon-wrench"></i> Setup</h4>
-	<ol>
-	<li><a href="https://github.com/Jalalhejazi/HTML5-SuperTemplate">git clone HTML5 SuperTemplate</a></li>
-	<li>Include SuperTemplate resources
+	
+<h4>You can download using git, npm or bower </h4>
+
+<h6><i class="icon-download-alt"></i> git installation</h6>
+
 <pre>
-&lt;link rel=&quot;stylesheet&quot; href=&quot;css/SuperTemplate.css&quot; media=&quot;all&quot; /&gt; 
+git clone https://github.com/Jalalhejazi/HTML5-SuperTemplate.git 
 </pre>
+
+<h6><i class="icon-download-alt"></i> npm installation</h6>
+
+<pre>
+npm install html5-supertemplate	
+</pre>
+
+
+
+<h6><i class="icon-download-alt"></i> bower installation</h6>
+
+<pre>
+bower install HTML5-SuperTemplate
+</pre>
+
+<h6> <i class="icon-edit"></i> Head Setup</h6>
+<pre>
+&lt;link rel=&quot;stylesheet&quot; href=&quot;SuperTemplate.css&quot; media=&quot;all&quot; /&gt; 
+</pre>
+
+<h6> <i class="icon-edit"></i> Body Setup</h6>
 
 <pre>
 &lt;script src=&quot;http://code.jquery.com/jquery-latest.min.js&quot;&gt;&lt;/script&gt;
-&lt;script src=&quot;js/SuperTemplate.js&quot;&gt;&lt;/script&gt;  
+&lt;script src=&quot;SuperTemplate.js&quot;&gt;&lt;/script&gt;  
 </pre>
 
 	 
-	</ol>
+	</ul>
 	</div>
 	<div class="col_1"></div>
 	<div class="col_3">
